--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WebActivity"></activity>
+        <activity android:name=".WebActivity" />
         <activity android:name=".DrawingActivity" />
         <activity android:name=".TableActivity" />
         <activity android:name=".MainActivity">
